--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
+  font-size: 1.5em;
+  text-align: center;
+  background-color: cadetblue;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
